<resources>
    <string name="app_name">GTRideshare</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="already_registered">Already registered? Sign in Here</string>
    <string name="not_registered_yet">Create new account</string>
    <string name="error_invalid_email">You must use a gatech.edu email address</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Sign up</string>
    <string-array name="schedule_times">
        <item>8 AM</item>
        <item>9 AM</item>
        <item>10 AM</item>
        <item>11 AM</item>
        <item>12 PM</item>
        <item>1 PM</item>
        <item>2 PM</item>
        <item>3 PM</item>
        <item>4 PM</item>
        <item>5 PM</item>
        <item>6 PM</item>
        <item>7 PM</item>
        <item>8 PM</item>
        <item>9 PM</item>
        <item> n/a </item>
    </string-array>
    <array name="numSeats">
        <item>n/a</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </array>
    <array name="filterOptions">
        <item>Schedule Match</item>
        <item>Distance</item>
        <item>Time</item>
    </array>
</resources>
